k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moviesx
  labels:
    app: moviesx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moviesx
  template:
    metadata:
      labels:
        app: moviesx
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: moviesx
          image: moviesx:dev
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 5
            failureThreshold: 3
