k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moviesx
  labels:
    app: moviesx
spec:
  type: ClusterIP
  selector:
    app: moviesx
  ports:
    - name: http
      port: 80
      targetPort: 8080
